<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                             http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>com.phone</groupId>
    <artifactId>phone-analysis-parent</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>phone-analysis-parent</name>
    <description>Phone sales big-data analysis (Spring Boot + Spark + Hive + Kafka + Vue).</description>

    <modules>
        <module>app</module>
        <module>spark-etl</module>
    </modules>

    <!-- ============================================================
         版本统一管理（与 docs/deploy/ 中各组件版本严格对齐）
         ============================================================ -->
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <java.version>1.8</java.version>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>

        <scala.version>2.12.17</scala.version>
        <scala.binary.version>2.12</scala.binary.version>

        <spring-boot.version>2.7.18</spring-boot.version>
        <spark.version>3.3.1</spark.version>
        <hadoop.version>3.3.4</hadoop.version>
        <hive.version>3.1.3</hive.version>
        <kafka.version>3.3.1</kafka.version>
        <mysql.connector.version>8.0.31</mysql.connector.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- Spring Boot BOM -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.10.1</version>
                    <configuration>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                        <encoding>UTF-8</encoding>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

</project>
